--- a/docs/importance_sampling_distributed_training.lyx
+++ b/docs/importance_sampling_distributed_training.lyx
@@ -60,8 +60,18 @@
 \begin_body
 
 \begin_layout Section*
-Importance Sampling to be used in Distributed Training
+NoteNets: Accelerating Deep Learning with Distributed Importance Sampling
 \end_layout
+
+Abstract: 
+
+-Humans are able to accelerate learning by selecting training material that is both informative and at an appropriate difficulty level.  As a person learns more about a subject, one benefits from looking at increasingly difficult and complicated examples.  On the other hand, the majority of the Deep Learning models sample the training data uniformly at random.  
+
+-We propose a distributed framework in which one set of workers search the training dataset to find the most interesting examples and another set of workers train on those instances.  
+
+
+
+-Theory suggests
 
 \begin_layout Standard
 Let 
